2020-05-10  John Darrington <john@darrington.wattle.id.au>

	* poke/poke.c (mi_supported_p): New variable.
	* poke/poke.c (POKE_MI): Evaluate this macro once only.

2020-05-10  Bruno Haible  <bruno@clisp.org>

	Fix wrong rpath in poke/.libs/lt-poke.
	* poke/Makefile.am (poke_LDADD): Use LTLIBTEXTSTYLE, not LIBTEXTSTYLE.

2020-05-10  Jose E. Marchesi  <jemarch@gnu.org>

	* gui: rename scripts.

2020-05-10  Jose E. Marchesi  <jemarch@gnu.org>

	* m4/tcl.m4: Strip from unneeded macros.
	(POKE_TCLTK): New macro.
	* configure: Use POKE_TCLTK.

2020-05-10  Jose E. Marchesi  <jemarch@gnu.org>

	* m4/tcl.m4: New file.
	* .x-sc_m4_quote_check: New file.
	* .x-sc_prohibit_always_true_header_tests: Likewise.
	* .x-sc_prohibit_magic_number_exit: Likewise.
	* .x-sc_prohibit_test_minus_ao: Likewise.
	* .x-sc_useless_cpp_parens: Likewise.
	* .x-sc_space_tab: Add m4/tcl.m4.

2020-05-10  Jose E. Marchesi  <jemarch@gnu.org>

	* Makefile.am (-DLOCALEDIR): Add to CPPFLAGS.
	* poke-gui.c (print_version): Call bindtextdomain.

2020-05-10  Jose E. Marchesi  <jemarch@gnu.org>

	* gui: Renamed from PoK.
	* Makefile.am (SUBDIR): Add gui.
	* configure.ac (AC_CONFIG_FILES): Add gui/Makefile.
	Support for --enable-gui.
	* run.in (POKEGUIDIR): Define and export POKEGUIDIR.
	* bootstrap.conf (bootstrap_post_import_hook): Create gl-gui.
	(gui_modules): Define.

2020-05-09  Jose E. Marchesi  <jemarch@gnu.org>

	* doc/poke.texi (MI Requests): New section.
	(MI Responses): Likewise.
	(MI Events): Likewise.
	(Event INITIALIZE): Likewise.
	(Request EXIT): Likewise.
	(Response EXIT): Likewise.

2020-05-09  Jose E. Marchesi  <jemarch@gnu.org>

	* poke/pk-mi-msg.h (pk_mi_msg_event_initialized_mi_version):
	Define.
	* poke/pk-mi-msg.c (pk_mi_msg_event_initialized_mi_version):
	Likewise.
	* poke/pk-mi-msg.c (PK_MI_EVENT_INITIALIZED_MI_VERSION): Define.
	(struct pk_mi_event): New field args.initialized.mi_version.
	(pk_mi_make_event_initialized): Set the MI version.